extras/03-kubernetes/deploy-03/mi-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mi-app-svc
  name: mi-app-svc
spec:
  ports:
  - name: "80"
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: mi-pod
  type: ClusterIP
status:
  loadBalancer: {}
