extras/03-kubernetes/deploy-03/mi-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: mi-app-ingress
spec:
  rules:
  - host: mi-app.com
    http:
      paths:
      - backend:
          service:
            name: mi-app-svc
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
